# mas-dev-next

./: .editorconfig  .eslintignore  .gitignore  .gitlab-ci.yml  .prettierrc.cjs  .yarnrc.yml  README.md  lerna.json  lint-staged.config.js  package.json  pyproject.toml  tsconfig.base.json  vitest.workspace.ts
.gitlab/ci/: app.gitlab-ci.yml  cache.gitlab-ci.yml  code-navigation.gitlab-ci.yml  components.gitlab-ci.yml  ebt.gitlab-ci.yml  masmod.gitlab-ci.yml  maspy.gitlab-ci.yml  noctowl.gitlab-ci.yml  package.gitlab-ci.yml  phanpy.gitlab-ci.yml  prepare.gitlab-ci.yml  pyd.gitlab-ci.yml  snippet.gitlab-ci.yml  variables.gitlab-ci.yml
.gitlab/issue_templates/: Default.md  用户故事.md  缺陷.md  重构.md  需求.md
.gitlab/issue_templates/参考模板/: Bug.md  Empty State.md  Feature Proposal - detailed.md  Feature Proposal - lean.md  Refactoring.md  Test Plan.md
.gitlab/merge_request_templates/: Default.md  DevOps.md
.husky/: commit-msg  pre-commit
.scripts/: check_devtools.py  logger.py  mas-dev  qa.py  verify_commit.py
.scripts/bootstrap/: loader.cjs
.yarn/: .gitignore
apps/desktop/: .eslintrc.cjs  .eslintrc.js  index.html  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.mts  vite.config.ts
apps/desktop/.scripts/: build.mjs  debug.mjs
apps/desktop/src/launcher/: index.html  index.tsx
apps/desktop/src/platform/: main.ts  preload.ts
apps/desktop/src/workbench/: index.html  index.tsx  vite-env.d.ts
apps/desktop/static/maspectra-icon/installer/: icon.icns
apps/desktop/static/maspectra-icon/proj/: icon.icns
apps/maspectra/: .eslintrc.js  .gitignore  electron-builder.json5  jest.config.ts  package.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/maspectra/.scripts/: .debug.script.mjs
apps/maspectra/src/platform/: main.ts
c++/: .clang-format  .lldbinit  CMakeLists.txt  README.md
c++/.cmake/: CodeCoverage.cmake  DebugTargetProperties.cmake  LookForDependencies.cmake  LookForTestDependencies.cmake  __init__.py  ext_setup.py
c++/.debug/: LLDB_Eigen_Pretty_Printer.py
dev-packages/configs/: package.json  tsconfig.eslint.json  tsconfig.json
dev-packages/configs/eslint/: restricted-path.eslint.js  rules.eslint.js
dev-packages/eslint-plugin/: README.md  package.json
dev-packages/eslint-plugin/lib/: index.js
dev-packages/eslint-plugin/lib/rules/: check-nls.js  check-runtime-import.js
dev-packages/eslint-plugin/tests/rules/: check-nls.test.js
dev-packages/tools/: package.json  tsconfig.json
dev-packages/tools/src/localization/: extractor.test.ts
dev-packages/tools/src/reporter/: index.ts
dev-packages/vite-electron-plugin/: .eslintrc.cjs  package.json  tsconfig.json
dev-packages/vite-electron-plugin/src/: electron-env.d.ts  not-bundle.ts  plugin.ts  resolve-config.ts  resolve-external.ts  server.ts
dev-packages/vite-markdown-plugin/: .eslintrc.cjs  README.md  package.json  tsconfig.json
python/: README.md  pyproject.toml
typescript/: .prettierignore  .prettierrc.js  .yarnrc  README.md  package.json  tsconfig.base.json  tsconfig.node.json
typescript/apps/maspectra/: electron-builder.json5  tsconfig.node.json
