[tool.poetry]
name = "mas-dev-python"
version = "0.0.0"
description = "mas-dev python project"
authors = ["Maspectra Dev Team <mas@drugchina.net>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
